# rural-cardiology-atlas

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  NIW_INTEGRATION.md  README.md
.github/workflows/: ci.yml  data-refresh.yml
app/: next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
app/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/app/about/: page.tsx
app/app/api/og/: route.tsx
app/app/county/[fips]/: page.tsx
app/app/embed/: page.tsx
app/components/: Atlas.tsx
app/components/export/: EmbedSnippet.tsx
app/components/filters/: FilterBar.tsx
app/components/landing/: Mark.tsx
app/components/map/: CountyMap.tsx  CountyPanel.tsx  Legend.tsx  topology.ts
app/components/stats/: StatsBar.tsx
app/lib/: color-scale.ts  counties.ts  filters.ts  fips.ts  stats.ts  types.ts
app/public/data/: README.md  counties.json
app/tests/: color-scale.test.ts  counties.test.ts  filters.test.ts  fips.test.ts
scripts/: 01_download_nppes.py  02_download_cms_pos.py  03_download_cdc_mortality.py  04_download_census.py  05_download_hrsa_hpsa.py  06_build_county_json.py  07_compute_distances.py  README.md  _common.py  pyproject.toml  run_all.py
