[project]
name = "rural-cardiology-atlas-pipeline"
version = "0.1.0"
description = "Public-data ETL pipeline for the Rural Cardiology Desert Atlas"
authors = [{ name = "Vicky Muller Ferreira, MD", email = "vickymuller@heartlandprotocol.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pandas>=2.2",
  "pyarrow>=17.0",
  "requests>=2.32",
  "tqdm>=4.66",
  "scipy>=1.13",
  "numpy>=2.0",
  "openpyxl>=3.1",
  "xlrd>=2.0",
]

[tool.uv]
package = false
